--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
+    "@react-email/components": "^0.0.7",
+    "@react-email/render": "^0.0.7",
     "daisyui": "^2.51.6",
     "formik": "^2.4.2",
     "localforage": "^1.10.0",
@@ -18,6 +20,7 @@
     "nodemailer": "^6.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-email": "^1.9.4",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.1",
     "react-scroll": "^1.8.9",
