--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@headlessui/react": "^1.7.14",
     "@react-email/components": "^0.0.7",
     "@react-email/render": "^0.0.7",
@@ -19,9 +20,9 @@
     "match-sorter": "^6.3.1",
     "nodemailer": "^6.9.3",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18.2.0",
     "react-email": "^1.9.4",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.1",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
